# physics-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
engine/: CMakeLists.txt
engine/include/: AbstractGame.h  EventEngine.h  GraphicsEngine.h  PhysicsEngine.h  XCube2d.h
engine/include/utils/: EngineCommon.h  GameMath.h
engine/src/: AbstractGame.cpp  EventEngine.cpp  GraphicsEngine.cpp  PhysicsEngine.cpp  XCube2d.cpp
game/: CMakeLists.txt  easterEgg.json
game/include/: MyGame.h
game/src/: MyGame.cpp  MyGame.h  main.cpp
libs/SDL2/: WhatsNew.txt
libs/SDL2/i686-w64-mingw32/include/SDL2/: SDL_syswm.h
libs/SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_egl.h  SDL_events.h  SDL_hints.h  SDL_opengl.h  SDL_render.h  SDL_sensor.h  SDL_video.h
libs/SDL2_image/cmake/: sdl2_image-config-version.cmake  sdl2_image-config.cmake
src/: MyGame.cpp  main.cpp
src/Engine/: AbstractGame.cpp  AbstractGame.h  XCube2d.cpp  XCube2d.h
src/Engine/Utils/: EngineCommon.h
